improve JVM flags for JDK 21
Signed-off-by: Ludovic Orban <lorban@bitronix.be>